<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.cote.rocket</groupId>
	<artifactId>accelerant</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>accelerant</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.sonarsource.scanner.maven</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>3.9</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>14</source>
					<target>14</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19</version>
				<dependencies>

					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit47</artifactId>
						<version>2.19</version>
					</dependency>

				</dependencies>

				<configuration>
					<skipTests>true</skipTests>
					<argLine>-Xmx4096m</argLine>
					<includes>
						<include>**/Test*.java</include>
					</includes>
					<excludes>
						<!-- 
						
						<exclude>**/TestCommunityAccessToken.java</exclude>
						-->
						<exclude>**/TestIdentityService.java</exclude>
						<exclude>**/TestApi.java</exclude>
						<exclude>**/TestCommunities.java</exclude>
						<exclude>**/TestAuthorization.java</exclude> 
						<exclude>**/TestTraitType.java</exclude>
						

						<exclude>**/TestFormElementValue.java</exclude>


						<exclude>**/TestBulkFactory.java</exclude>
						<exclude>**/TestCapabilities.java</exclude>

						<exclude>**/TestFactoryInterfaces.java</exclude>
						<exclude>**/TestEventType.java</exclude>

						<!-- REGRESSED -->
						<exclude>**/TestBulkUpdate.java</exclude>

						<exclude>**/TestRocket.java</exclude>

						<!-- RETEST -->


						<exclude>**/TestFormFactory.java</exclude>



						<exclude>**/TestAccelerantSetup.java</exclude>

						<exclude>**/TestDataSpeed.java</exclude>

						<exclude>**/TestAccelerantInit.java</exclude>
						<exclude>**/TestTicketFactory.java</exclude>

						<exclude>**/TestStageFactory.java</exclude>
						<exclude>**/TestMethodologyFactory.java</exclude>
						<exclude>**/TestMethodologyParticipationFactory.java</exclude>
						<exclude>**/TestWorkFactory.java</exclude>
						<exclude>**/TestWorkParticipationFactory.java</exclude>

						<exclude>**/TestTaskParticipationFactory.java</exclude>

						<exclude>**/TestTaskFactory.java</exclude>
						<exclude>**/TestModelFactory.java</exclude>
						<exclude>**/TestModelParticipationFactory.java</exclude>
						<exclude>**/TestArtifactFactory.java</exclude>

						<exclude>**/TestLifecycleParticipationFactory.java</exclude>
						<exclude>**/TestLifecycleFactory.java</exclude>

					</excludes>

					<systemProperties>
						<property>
							<name>log4j.configurationFile</name>
							<value>log4j2-AccelerantLogging.xml</value>
						</property>
					</systemProperties>

				</configuration>
			</plugin>
			<plugin>
              <groupId>org.jacoco</groupId>
              <artifactId>jacoco-maven-plugin</artifactId>
              <version>0.8.6</version>
		       <executions>
		        <execution>
		          <id>start-agent</id>
		          <goals>
		            <goal>prepare-agent</goal>
		          </goals>
		        </execution>
		        <execution>
		          <id>generate-report</id>
		          <goals>
		            <goal>report</goal>
		          </goals>
		          <configuration>
		            <title>Coverage with JaCoCo</title>
		          </configuration>
		        </execution>
		      </executions>
          </plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.1</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>2.1.12</version>
		</dependency>
		<dependency>
			<groupId>org.cote.accountmanager</groupId>
			<artifactId>objects</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.cote.accountmanager</groupId>
			<artifactId>dataaccess</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.cote.rocket</groupId>
			<artifactId>propellant</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>net.sourceforge</groupId>
			<artifactId>mpxj</artifactId>
			<version>4.3.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-csv</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-web-api</artifactId>
			<version>7.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.0.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-dbcp2</artifactId>
			<version>2.7.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-pool2</artifactId>
			<version>2.7.0</version>
		</dependency>
	</dependencies>
</project>
